{
  "version": 4,
  "terraform_version": "1.1.7",
  "serial": 855,
  "lineage": "b8488570-ca34-8faa-7f08-33d289f4fef9",
  "resources": [
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "ramp_up_training-private-0",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:961518039473:subnet/subnet-0d74b59773148d704",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1a",
            "availability_zone_id": "usw1-az1",
            "available_ip_address_count": 2035,
            "cidr_block": "10.1.80.0/21",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d74b59773148d704",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "961518039473",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Name": "ramp_up_training-private-0"
            },
            "vpc_id": "vpc-0d2831659ef89870c"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "ramp_up_training-private-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:961518039473:subnet/subnet-038fa9d9a69d6561e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1c",
            "availability_zone_id": "usw1-az3",
            "available_ip_address_count": 2036,
            "cidr_block": "10.1.88.0/21",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-038fa9d9a69d6561e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "961518039473",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Name": "ramp_up_training-private-1"
            },
            "vpc_id": "vpc-0d2831659ef89870c"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "ramp_up_training-public-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:961518039473:subnet/subnet-055c41fce697f9cca",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1c",
            "availability_zone_id": "usw1-az3",
            "available_ip_address_count": 2026,
            "cidr_block": "10.1.8.0/21",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-055c41fce697f9cca",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "961518039473",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Name": "ramp_up_training-public-1"
            },
            "vpc_id": "vpc-0d2831659ef89870c"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "ramp_up_training_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:961518039473:vpc/vpc-0d2831659ef89870c",
            "cidr_block": "10.1.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-01815efd6a5df2a0a",
                "cidr_block": "10.1.0.0/16",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-553f7230",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0d2831659ef89870c",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-03654b638b2fa05dc",
            "owner_id": "961518039473",
            "tags": {
              "Name": "ramp_up_training"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-009726b835c24a3aa",
            "arn": "arn:aws:ec2:us-west-1:961518039473:instance/i-0fd6ae1469dd8b9e8",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0fd6ae1469dd8b9e8",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "mateo.rincona",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-01221316ac5ffc0ff",
            "private_dns": "ip-10-1-8-5.us-west-1.compute.internal",
            "private_ip": "10.1.8.5",
            "public_dns": "ec2-54-153-55-89.us-west-1.compute.amazonaws.com",
            "public_ip": "54.153.55.89",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-06315f575d4db8566",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0305bdeab4a6f375b"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-055c41fce697f9cca",
            "tags": {
              "Name": "Bastion",
              "project": "ramp-up-devops",
              "responsible": "mateo.rincona"
            },
            "tags_all": {
              "Name": "Bastion",
              "project": "ramp-up-devops",
              "responsible": "mateo.rincona"
            },
            "tenancy": "default",
            "volume_tags": {
              "Name": "Bastion",
              "project": "ramp-up-devops",
              "responsible": "mateo.rincona"
            },
            "vpc_security_group_ids": [
              "sg-0305bdeab4a6f375b"
            ]
          },
          "dependencies": [
            "aws_key_pair.mateorincona",
            "aws_security_group.SG-Bastion-movie-analyst",
            "data.aws_subnet.ramp_up_training-public-1",
            "data.aws_vpc.ramp_up_training_vpc",
            "data.external.findmyip",
            "tls_private_key.key"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "ALB-Backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-west-1:961518039473:loadbalancer/app/ALB-Backend/2bc08dc8530dd6fc",
            "arn_suffix": "app/ALB-Backend/2bc08dc8530dd6fc",
            "desync_mitigation_mode": "defensive",
            "dns_name": "internal-ALB-Backend-1703911074.us-west-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-west-1:961518039473:loadbalancer/app/ALB-Backend/2bc08dc8530dd6fc",
            "idle_timeout": 60,
            "internal": true,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "ALB-Backend",
            "security_groups": [
              "sg-00989ff4f5cfc3252"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-038fa9d9a69d6561e"
              },
              {
                "subnet_id": "subnet-0d74b59773148d704"
              }
            ],
            "subnets": [
              "subnet-038fa9d9a69d6561e",
              "subnet-0d74b59773148d704"
            ],
            "tags": {
              "project": "ramp-up-devops",
              "responsible": "mateo.rincona"
            },
            "tags_all": {
              "project": "ramp-up-devops",
              "responsible": "mateo.rincona"
            },
            "vpc_id": "vpc-0d2831659ef89870c",
            "zone_id": "Z368ELLRRE2KJ0"
          },
          "dependencies": [
            "aws_security_group.SG-Backend-LB",
            "aws_security_group.SG-Bastion-movie-analyst",
            "aws_security_group.SG-Frontend-LB",
            "aws_security_group.SG-Frontend-movie-analyst",
            "data.aws_subnet.ramp_up_training-private-0",
            "data.aws_subnet.ramp_up_training-private-1",
            "data.aws_vpc.ramp_up_training_vpc",
            "data.external.findmyip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "ALB-Frontend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-west-1:961518039473:loadbalancer/app/ALB-Frontend/610ac94615b5f1f1",
            "arn_suffix": "app/ALB-Frontend/610ac94615b5f1f1",
            "desync_mitigation_mode": "defensive",
            "dns_name": "ALB-Frontend-1782346474.us-west-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-west-1:961518039473:loadbalancer/app/ALB-Frontend/610ac94615b5f1f1",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "ALB-Frontend",
            "security_groups": [
              "sg-0375b4bf58785197d"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-038fa9d9a69d6561e"
              },
              {
                "subnet_id": "subnet-0d74b59773148d704"
              }
            ],
            "subnets": [
              "subnet-038fa9d9a69d6561e",
              "subnet-0d74b59773148d704"
            ],
            "tags": {
              "project": "ramp-up-devops",
              "responsible": "mateo.rincona"
            },
            "tags_all": {
              "project": "ramp-up-devops",
              "responsible": "mateo.rincona"
            },
            "vpc_id": "vpc-0d2831659ef89870c",
            "zone_id": "Z368ELLRRE2KJ0"
          },
          "dependencies": [
            "aws_security_group.SG-Frontend-LB",
            "data.aws_subnet.ramp_up_training-private-0",
            "data.aws_subnet.ramp_up_training-private-1",
            "data.aws_vpc.ramp_up_training_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-west-1:961518039473:listener/app/ALB-Backend/2bc08dc8530dd6fc/6321a04799936648",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-west-1:961518039473:targetgroup/TG-Backend/dab3b50ca09ae876",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-1:961518039473:listener/app/ALB-Backend/2bc08dc8530dd6fc/6321a04799936648",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-west-1:961518039473:loadbalancer/app/ALB-Backend/2bc08dc8530dd6fc",
            "port": 3000,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {
              "project": "ramp-up-devops",
              "responsible": "mateo.rincona"
            },
            "tags_all": {
              "project": "ramp-up-devops",
              "responsible": "mateo.rincona"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.ALB-Backend",
            "aws_lb_target_group.TG-Backend",
            "aws_security_group.SG-Backend-LB",
            "aws_security_group.SG-Bastion-movie-analyst",
            "aws_security_group.SG-Frontend-LB",
            "aws_security_group.SG-Frontend-movie-analyst",
            "data.aws_subnet.ramp_up_training-private-0",
            "data.aws_subnet.ramp_up_training-private-1",
            "data.aws_vpc.ramp_up_training_vpc",
            "data.external.findmyip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "frontend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-west-1:961518039473:listener/app/ALB-Frontend/610ac94615b5f1f1/5514db32c5d0a691",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-west-1:961518039473:targetgroup/TG-Frontend/11eada619124042b",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-1:961518039473:listener/app/ALB-Frontend/610ac94615b5f1f1/5514db32c5d0a691",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-west-1:961518039473:loadbalancer/app/ALB-Frontend/610ac94615b5f1f1",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {
              "project": "ramp-up-devops",
              "responsible": "mateo.rincona"
            },
            "tags_all": {
              "project": "ramp-up-devops",
              "responsible": "mateo.rincona"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.ALB-Frontend",
            "aws_lb_target_group.TG-Frontend",
            "aws_security_group.SG-Frontend-LB",
            "data.aws_subnet.ramp_up_training-private-0",
            "data.aws_subnet.ramp_up_training-private-1",
            "data.aws_vpc.ramp_up_training_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "TG-Backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-1:961518039473:targetgroup/TG-Backend/dab3b50ca09ae876",
            "arn_suffix": "targetgroup/TG-Backend/dab3b50ca09ae876",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-1:961518039473:targetgroup/TG-Backend/dab3b50ca09ae876",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "TG-Backend",
            "port": 3000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "project": "ramp-up-devops",
              "responsible": "mateo.rincona"
            },
            "tags_all": {
              "project": "ramp-up-devops",
              "responsible": "mateo.rincona"
            },
            "target_type": "instance",
            "vpc_id": "vpc-0d2831659ef89870c"
          },
          "dependencies": [
            "data.aws_vpc.ramp_up_training_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "TG-Frontend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-1:961518039473:targetgroup/TG-Frontend/11eada619124042b",
            "arn_suffix": "targetgroup/TG-Frontend/11eada619124042b",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-1:961518039473:targetgroup/TG-Frontend/11eada619124042b",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "TG-Frontend",
            "port": 3030,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "project": "ramp-up-devops",
              "responsible": "mateo.rincona"
            },
            "tags_all": {
              "project": "ramp-up-devops",
              "responsible": "mateo.rincona"
            },
            "target_type": "instance",
            "vpc_id": "vpc-0d2831659ef89870c"
          },
          "dependencies": [
            "data.aws_vpc.ramp_up_training_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "SG-Backend-LB",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:961518039473:security-group/sg-00989ff4f5cfc3252",
            "description": "Allow traffic from frontend instances",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00989ff4f5cfc3252",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow access from Bastion through SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0305bdeab4a6f375b"
                ],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "Allow access from Bastion through port 3000",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0305bdeab4a6f375b"
                ],
                "self": false,
                "to_port": 3000
              },
              {
                "cidr_blocks": [],
                "description": "Allow access from frontend security group",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0ee67cbdadede652d"
                ],
                "self": false,
                "to_port": 3000
              }
            ],
            "name": "SG-Backend-LB",
            "name_prefix": "",
            "owner_id": "961518039473",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "SG-Backend-LB",
              "project": "ramp-up-devops",
              "responsible": "mateo.rincona"
            },
            "tags_all": {
              "Name": "SG-Backend-LB",
              "project": "ramp-up-devops",
              "responsible": "mateo.rincona"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d2831659ef89870c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.SG-Bastion-movie-analyst",
            "aws_security_group.SG-Frontend-LB",
            "aws_security_group.SG-Frontend-movie-analyst",
            "data.aws_vpc.ramp_up_training_vpc",
            "data.external.findmyip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "SG-Backend-movie-analyst",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:961518039473:security-group/sg-03cce5a0728fbc43a",
            "description": "Allow inbound traffic from other sources",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03cce5a0728fbc43a",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow access from Bastion through SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0305bdeab4a6f375b"
                ],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "Allow access from Bastion through port 3000",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0305bdeab4a6f375b"
                ],
                "self": false,
                "to_port": 3000
              },
              {
                "cidr_blocks": [],
                "description": "Backend to RDS",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 3306
              },
              {
                "cidr_blocks": [],
                "description": "from LB-Backend to Backend instances",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-00989ff4f5cfc3252"
                ],
                "self": false,
                "to_port": 3000
              }
            ],
            "name": "SG-Backend-movie-analyst",
            "name_prefix": "",
            "owner_id": "961518039473",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "SG-Backend-movie-analyst",
              "project": "ramp-up-devops",
              "responsible": "mateo.rincona"
            },
            "tags_all": {
              "Name": "SG-Backend-movie-analyst",
              "project": "ramp-up-devops",
              "responsible": "mateo.rincona"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d2831659ef89870c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.SG-Backend-LB",
            "aws_security_group.SG-Bastion-movie-analyst",
            "aws_security_group.SG-Frontend-LB",
            "aws_security_group.SG-Frontend-movie-analyst",
            "data.aws_vpc.ramp_up_training_vpc",
            "data.external.findmyip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "SG-Bastion-movie-analyst",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:961518039473:security-group/sg-0305bdeab4a6f375b",
            "description": "Allow Frontend Auto Scaling Instances inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0305bdeab4a6f375b",
            "ingress": [
              {
                "cidr_blocks": [
                  "181.130.2.24/32"
                ],
                "description": "Local to Bastion",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "SG-Bastion-movie-analyst",
            "name_prefix": "",
            "owner_id": "961518039473",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "SG-Bastion-movie-analyst",
              "project": "ramp-up-devops",
              "responsible": "mateo.rincona"
            },
            "tags_all": {
              "Name": "SG-Bastion-movie-analyst",
              "project": "ramp-up-devops",
              "responsible": "mateo.rincona"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d2831659ef89870c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.ramp_up_training_vpc",
            "data.external.findmyip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "SG-Frontend-LB",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:961518039473:security-group/sg-0375b4bf58785197d",
            "description": "Allow traffic from http",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0375b4bf58785197d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow access from everywhere using http",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "SG-Frontend-LB",
            "name_prefix": "",
            "owner_id": "961518039473",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "SG-Frontend-LB",
              "project": "ramp-up-devops",
              "responsible": "mateo.rincona"
            },
            "tags_all": {
              "Name": "SG-Frontend-LB",
              "project": "ramp-up-devops",
              "responsible": "mateo.rincona"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d2831659ef89870c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.ramp_up_training_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "SG-Frontend-movie-analyst",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:961518039473:security-group/sg-0ee67cbdadede652d",
            "description": "Allow Frontend Auto Scaling Instances inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ee67cbdadede652d",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow access from ALB-Frontend",
                "from_port": 3030,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0375b4bf58785197d"
                ],
                "self": false,
                "to_port": 3030
              },
              {
                "cidr_blocks": [],
                "description": "Allow access from Bastion through SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0305bdeab4a6f375b"
                ],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "Allow access from Bastion through port 3030",
                "from_port": 3030,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0305bdeab4a6f375b"
                ],
                "self": false,
                "to_port": 3030
              }
            ],
            "name": "SG-Frontend-movie-analyst",
            "name_prefix": "",
            "owner_id": "961518039473",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "SG-Frontend-movie-analyst",
              "project": "ramp-up-devops",
              "responsible": "mateo.rincona"
            },
            "tags_all": {
              "Name": "SG-Frontend-movie-analyst",
              "project": "ramp-up-devops",
              "responsible": "mateo.rincona"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d2831659ef89870c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.SG-Bastion-movie-analyst",
            "aws_security_group.SG-Frontend-LB",
            "data.aws_vpc.ramp_up_training_vpc",
            "data.external.findmyip"
          ]
        }
      ]
    }
  ]
}